# advent_of_code_2022

./: .gitattributes  Cargo.toml
data/: day01.input  day02.input  day03.input  day04.input  day05.input  day06.input  day07.input  day08.input  day09.input  day10.input  day11.input  day12.input  day13.input  day14.input  day15.input  day16.input  day17.input  day18.input  day19.input  day20.input  day21.input  day22.input  day23.input  day24.input  day25.input
src/: lib.rs
