[package]
name = "advent_of_code_2022"
version = "0.1.0"
author = ["noahares"]
edition = "2021"

[lib]
name = "libaoc"
path = "src/lib.rs"

[[bin]]
name = "day01"
path = "src/bin/day01.rs"

[[bin]]
name = "day02"
path = "src/bin/day02.rs"

[[bin]]
name = "day03"
path = "src/bin/day03.rs"

[[bin]]
name = "day04"
path = "src/bin/day04.rs"

[[bin]]
name = "day05"
path = "src/bin/day05.rs"

[[bin]]
name = "day06"
path = "src/bin/day06.rs"

[[bin]]
name = "day07"
path = "src/bin/day07.rs"

[[bin]]
name = "day08"
path = "src/bin/day08.rs"

[dependencies]
anyhow = "1.0.51"
itertools = "0.10.5"
colored = "2.0.0"
